<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeToRefresh">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_entries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_to_internet_try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:id="@+id/connection"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>