<resources>
    <string name="app_name">DevigetOscarOlivares</string>
    <string name="no_connection_to_internet_try_again">No Connection to internet Try again</string>
    <string name="dismiss_all">Dismiss all</string>
    <string name="_0">0</string>
</resources>