<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/dismiss"
        android:title="@string/dismiss_all"
        android:icon="@drawable/ic_baseline_clear_all_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/showList"
        android:title="Show List"
        android:icon="@drawable/ic_baseline_list_24"
        app:showAsAction="ifRoom"/>

</menu>